# eszett

./: .gitignore  LICENSE  Pipfile  eszett.service  pyproject.toml
eszett/: __init__.py  __main__.py  eszett.py
eszett/assistant/: assistant.py
eszett/cards/: carddetails.py  database.py  exceptions.py
eszett/cast/: cast_state.py  exceptions.py  player.py  player_state.py
eszett/reader/: reader.py
eszett/resources/: database.json
